# project_softwareenrginireeing

./: Administrator.cpp  Administrator.h  CMakeLists.txt  Gosc.cpp  Gosc.h  Klient.cpp  Klient.h  Koszyk.cpp  Koszyk.h  Osoba.cpp  Osoba.h  Produkt.cpp  Produkt.h  SystemPlatnosci.cpp  SystemPlatnosci.h  magazyn.cpp  magazyn.h  main.cpp
